feat: security hardening, role system, and production config
SEGURIDAD (Fase 1)
- Secretos movidos a variables de entorno (application-local.properties ignorado por git)
- Sistema de roles ROLE_MEDICO / ROLE_ADMIN con permisos diferenciados
- Endpoint /register eliminado; creacion de usuarios es solo para admins
- CORS restringido con variable de entorno ALLOWED_ORIGINS
- Clave JWT corregida: BASE64 decode + expiracion 8h (antes 30 dias)

CALIDAD (Fase 2)
- Bean Validation en PacienteRequest y TurnoRequest con mensajes en espanol
- orElseThrow() reemplazados por ResponseStatusException (404/401 correctos)
- new Thread() reemplazado por @Async con pool gestionado por Spring
- deleteByPacienteId() con query JPQL directa en TurnoRepository

PRODUCCION (Fase 3)
- Perfiles Spring: application-dev.properties / application-prod.properties
- Spring Actuator: /actuator/health expuesto y publico para Railway
- DataInitializer: crea admin automaticamente si no existe (credenciales via env vars)
- apiClient.js lee URL del backend desde app.json extra.apiUrl
- app.json actualizado con nombre, bundle ID y slug correctos